force-app/main/default/objects/Intervalle_de_temps__c/Intervalle_de_temps__c.object-meta.xml
<CustomObject>
    <label>Intervalle de temps</label>
    <nameField>
        <displayFormat>FDT-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Intervalle de temps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>