force-app/main/default/objects/Intervalle_de_temps__c/fields/Ressource__c.field-meta.xml
<CustomField>
    <fullName>Ressource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ressource</label>
    <referenceTo>Ressource__c</referenceTo>
    <relationshipName>Feuille_de_temps</relationshipName>
    <type>Lookup</type>
</CustomField>