force-app/main/default/objects/Intervalle_de_temps__c/fields/Tache__c.field-meta.xml
<CustomField>
    <fullName>Tache__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tâche</label>
    <referenceTo>Tache__c</referenceTo>
    <relationshipName>Feuille_de_temps</relationshipName>
    <type>Lookup</type>
</CustomField>