force-app/main/default/objects/Intervalle_de_temps__c/fields/Total_Heures__c.field-meta.xml
<CustomField>
    <fullName>Total_Heures__c</fullName>
    <label>Total Heures</label>
    <summarizedField>Saisie_de_temps__c.Heures__c</summarizedField>
    <summaryForeignKey>Saisie_de_temps__c.Feuille_de_temps__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>